[tool.poetry]
name = "todo-web-app"
version = "0.1.0"
description = "This is a simple todo web app written using FastAPI, SQLModel, and Vue.js."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
